testsuite/tests/rename/should_fail/T11071.stderr

T11071.hs:19:12: error:
    Not in scope: ‘NoSuchModule.foo’
    No module named ‘NoSuchModule’ is imported.

T11071.hs:20:12: error:
    Not in scope: ‘Data.List.foobar’
    Module ‘Data.List’ does not export ‘foobar’.

T11071.hs:21:12: error:
    Not in scope: ‘M.foobar’
    Neither ‘Data.IntMap’ nor ‘Data.Map’ exports ‘foobar’.

T11071.hs:22:12: error:
    Not in scope: ‘M'.foobar’
    Neither ‘System.IO’, ‘Data.IntMap’ nor ‘Data.Map’ exports ‘foobar’.

T11071.hs:23:12: error:
    Not in scope: ‘Data.List.sort’
    Perhaps you want to add ‘sort’ to the import list in the import of
    ‘Data.List’ (T11071.hs:3:1-24).

T11071.hs:24:12: error:
    Not in scope: ‘Data.List.unlines’
    Perhaps you meant ‘Data.List.lines’ (imported from Data.List)
    Perhaps you want to add ‘unlines’ to the import list
    in the import of ‘Data.List’ (T11071.hs:3:1-24).

T11071.hs:25:12: error:
    Not in scope: ‘M.size’
    Perhaps you want to add ‘size’ to one of these import lists:
      ‘Data.IntMap’ (T11071.hs:5:1-36)
      ‘Data.Map’ (T11071.hs:4:1-33)

T11071.hs:26:12: error:
    Not in scope: ‘M.valid’
    Perhaps you meant one of these:
      ‘M'.valid’ (imported from Data.Map),
      ‘M'.valid’ (imported from Data.Map)
    Perhaps you want to add ‘valid’ to the import list in the import of
    ‘Data.Map’ (T11071.hs:4:1-33).

T11071.hs:27:12: error:
    Not in scope: data constructor ‘Ord.Down’
    Perhaps you want to remove ‘Down’ from the explicit hiding list
    in the import of ‘Data.Ord’ (T11071.hs:8:1-46).

T11071.hs:28:12: error:
    Not in scope: ‘M'.size’
    Perhaps you want to remove ‘size’ from the hiding clauses
    in one of these imports:
      ‘Data.IntMap’ (T11071.hs:12:1-48)
      ‘Data.Map’ (T11071.hs:10:1-53)
